--- a/WpfApp/Views/CartView.xaml
+++ b/WpfApp/Views/CartView.xaml
@@ -9,28 +9,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="362" Width="600">
     <UserControl.Resources>
-        <ControlTemplate x:Key="validationFailed">
-            <DockPanel LastChildFill="true">
-                <Border Background="Red" DockPanel.Dock="right" Margin="5,0,0,0" Width="20" Height="20" CornerRadius="10"
-                                    ToolTip="{Binding ElementName=customAdorner, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}">
-                    <TextBlock Text="!" VerticalAlignment="center" HorizontalAlignment="center" FontWeight="Bold" Foreground="white">
-                    </TextBlock>
-                </Border>
-                <AdornedElementPlaceholder Name="customAdorner" VerticalAlignment="Center" >
-                    <Border BorderBrush="red" BorderThickness="1" />
-                </AdornedElementPlaceholder>
-            </DockPanel>
-        </ControlTemplate>
-        <Style TargetType="TextBox">
-            <Style.Triggers>
-                <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="ToolTip"
-                Value="{Binding RelativeSource={RelativeSource Self},
-                    Path=(Validation.Errors)[0].ErrorContent}" />
-                    <Setter Property="Foreground" Value="Red" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/../windows/Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </UserControl.Resources>
     <Grid Margin="0,-12,1,4">
         <Grid.ColumnDefinitions>
